--- a/index.htm
+++ b/index.htm
@@ -713,16 +713,17 @@ div[class="adsbygoogle"][id="ad-detector"] { display: block !important; }</style
 	
 	<div class="text">
 		<p>Спасибо за проявленный интерес. Все уроки данного курса Вы можете посмотреть прямо здесь.</p>
-<p>Скачать исходники проекта можно по этой <a href="https://blog.myrusakov.ru/download.php?course=freenn_source.zip">ссылке</a>.</p>
+
 <div class="lesson">
    
     <h2>Урок 1. Введение в машинное обучение</h2>
-    <div class="center">
+	    <div class="center">
         <video width="480" height="295" controls=""><source src="https://files.myrusakov.ru/video/freenn/Lesson_1_2.mp4" type="video/mp4"></video>
     </div>
 </div>
 <div class="lesson">
     <h2>Урок 2. Установка необходимого ПО</h2>
+	<p>Если нет возможности (желания) устанавливать ПО на свой компьютер задания можно выполнять в GoogleColab по <a href="https://colab.research.google.com/">ссылке</a>.</p>
     <div class="center">
         <video width="480" height="295"  controls=""><source src="https://files.myrusakov.ru/video/freenn/Lesson_1_3.mp4" type="video/mp4"></video>
     </div>
